--- a/ExpertSystem/Modules/Base.lproj/Main.storyboard
+++ b/ExpertSystem/Modules/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--ScenariosVC-->
+        <!--Scenarios-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="ScenariosVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ScenariosVC" customModule="ExpertSystem" customModuleProvider="target" sceneMemberID="viewController">
@@ -56,7 +56,7 @@
                             <constraint firstAttribute="bottom" secondItem="QEI-VG-9hc" secondAttribute="bottom" id="s4T-CZ-hvN"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="DHS-v1-ouP"/>
+                    <navigationItem key="navigationItem" title="Scenarios" id="DHS-v1-ouP"/>
                     <connections>
                         <outlet property="scenariosTableView" destination="QEI-VG-9hc" id="mWh-kc-aOM"/>
                     </connections>
@@ -64,6 +64,85 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1066.4122137404579" y="-2.1126760563380285"/>
+        </scene>
+        <!--Case-->
+        <scene sceneID="N88-ED-E6a">
+            <objects>
+                <viewController storyboardIdentifier="CaseVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="zx1-Ww-t0a" customClass="CaseVC" customModule="ExpertSystem" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rRH-8w-b6A">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="cm0-cd-xGG">
+                                <rect key="frame" x="0.0" y="103" width="393" height="237"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4CX-TZ-2O8">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eV5-z3-KI0">
+                                        <rect key="frame" x="0.0" y="40.333333333333357" width="393" height="196.66666666666663"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="eV5-z3-KI0" secondAttribute="height" multiplier="2:1" id="76P-th-aUQ"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NOL-P5-oI1">
+                                <rect key="frame" x="0.0" y="340" width="393" height="512"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="AnswerTVCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AnswerTVCell" rowHeight="65" id="lxO-Oy-1TW" customClass="AnswerTVCell" customModule="ExpertSystem" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="65"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lxO-Oy-1TW" id="YgN-tx-XzR">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="65"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rVn-yO-Kre">
+                                                    <rect key="frame" x="30.000000000000004" y="22.333333333333336" width="41.333333333333343" height="20.333333333333336"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="rVn-yO-Kre" firstAttribute="leading" secondItem="YgN-tx-XzR" secondAttribute="leading" constant="30" id="fzU-Ag-xsb"/>
+                                                <constraint firstItem="rVn-yO-Kre" firstAttribute="centerY" secondItem="YgN-tx-XzR" secondAttribute="centerY" id="rzM-G3-aap"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="lblAnswer" destination="rVn-yO-Kre" id="nq0-lE-0bN"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="n8W-nw-QK0"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="NOL-P5-oI1" secondAttribute="bottom" id="1Ly-E9-XXy"/>
+                            <constraint firstItem="NOL-P5-oI1" firstAttribute="leading" secondItem="n8W-nw-QK0" secondAttribute="leading" id="AGK-nu-VZJ"/>
+                            <constraint firstItem="cm0-cd-xGG" firstAttribute="leading" secondItem="n8W-nw-QK0" secondAttribute="leading" id="Maa-yl-7JI"/>
+                            <constraint firstItem="n8W-nw-QK0" firstAttribute="trailing" secondItem="cm0-cd-xGG" secondAttribute="trailing" id="n7c-m7-ymI"/>
+                            <constraint firstItem="cm0-cd-xGG" firstAttribute="top" secondItem="n8W-nw-QK0" secondAttribute="top" id="oOw-1J-V4C"/>
+                            <constraint firstItem="n8W-nw-QK0" firstAttribute="trailing" secondItem="NOL-P5-oI1" secondAttribute="trailing" id="qvh-H0-yZ9"/>
+                            <constraint firstItem="NOL-P5-oI1" firstAttribute="top" secondItem="cm0-cd-xGG" secondAttribute="bottom" id="yiI-Nz-8eU"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Case" id="vJh-D0-Pxx"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="answersTableView" destination="NOL-P5-oI1" id="fw8-hf-XLh"/>
+                        <outlet property="imageView" destination="eV5-z3-KI0" id="9e8-Gl-K8H"/>
+                        <outlet property="lblCase" destination="4CX-TZ-2O8" id="8WF-t1-jJT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Mq-jW-5gK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2006.8702290076335" y="-2.1126760563380285"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0MX-BJ-WLA">
