--- a/ExpertSystem/Modules/Base.lproj/Main.storyboard
+++ b/ExpertSystem/Modules/Base.lproj/Main.storyboard
@@ -28,8 +28,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="79"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQf-S9-mJ0">
-                                                    <rect key="frame" x="50" y="29" width="43.333333333333343" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQf-S9-mJ0">
+                                                    <rect key="frame" x="50" y="0.0" width="313" height="79"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -37,7 +37,9 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="oQf-S9-mJ0" firstAttribute="leading" secondItem="WzR-wh-1qk" secondAttribute="leadingMargin" constant="30" id="45D-Jk-4jt"/>
-                                                <constraint firstItem="oQf-S9-mJ0" firstAttribute="centerY" secondItem="WzR-wh-1qk" secondAttribute="centerY" id="hT4-aD-4KK"/>
+                                                <constraint firstAttribute="trailing" secondItem="oQf-S9-mJ0" secondAttribute="trailing" constant="30" id="HRe-UM-ExN"/>
+                                                <constraint firstAttribute="bottom" secondItem="oQf-S9-mJ0" secondAttribute="bottom" id="OGU-4o-dHF"/>
+                                                <constraint firstItem="oQf-S9-mJ0" firstAttribute="top" secondItem="WzR-wh-1qk" secondAttribute="top" id="WuU-CX-Cx5"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -76,13 +78,13 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="cm0-cd-xGG">
                                 <rect key="frame" x="0.0" y="103" width="393" height="237"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4CX-TZ-2O8">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4CX-TZ-2O8">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eV5-z3-KI0">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eV5-z3-KI0">
                                         <rect key="frame" x="0.0" y="40.333333333333357" width="393" height="196.66666666666663"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="eV5-z3-KI0" secondAttribute="height" multiplier="2:1" id="76P-th-aUQ"/>
@@ -91,7 +93,7 @@
                                 </subviews>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NOL-P5-oI1">
-                                <rect key="frame" x="0.0" y="340" width="393" height="512"/>
+                                <rect key="frame" x="0.0" y="360" width="393" height="492"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="AnswerTVCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AnswerTVCell" rowHeight="65" id="lxO-Oy-1TW" customClass="AnswerTVCell" customModule="ExpertSystem" customModuleProvider="target">
@@ -101,7 +103,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="65"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rVn-yO-Kre">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rVn-yO-Kre">
                                                     <rect key="frame" x="30.000000000000004" y="22.333333333333336" width="41.333333333333343" height="20.333333333333336"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -129,7 +131,7 @@
                             <constraint firstItem="n8W-nw-QK0" firstAttribute="trailing" secondItem="cm0-cd-xGG" secondAttribute="trailing" id="n7c-m7-ymI"/>
                             <constraint firstItem="cm0-cd-xGG" firstAttribute="top" secondItem="n8W-nw-QK0" secondAttribute="top" id="oOw-1J-V4C"/>
                             <constraint firstItem="n8W-nw-QK0" firstAttribute="trailing" secondItem="NOL-P5-oI1" secondAttribute="trailing" id="qvh-H0-yZ9"/>
-                            <constraint firstItem="NOL-P5-oI1" firstAttribute="top" secondItem="cm0-cd-xGG" secondAttribute="bottom" id="yiI-Nz-8eU"/>
+                            <constraint firstItem="NOL-P5-oI1" firstAttribute="top" secondItem="cm0-cd-xGG" secondAttribute="bottom" constant="20" id="yiI-Nz-8eU"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Case" id="vJh-D0-Pxx"/>
