--- a/ExpertSystem/Modules/Base.lproj/Main.storyboard
+++ b/ExpertSystem/Modules/Base.lproj/Main.storyboard
@@ -17,8 +17,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contents not available..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="udv-Fs-7EJ">
+                                <rect key="frame" x="105.33333333333333" y="426" width="182.66666666666669" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="QEI-VG-9hc">
-                                <rect key="frame" x="12" y="103" width="369" height="749"/>
+                                <rect key="frame" x="12" y="155" width="369" height="697"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ScenarioTVCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ScenarioTVCell" rowHeight="79" id="xg3-Kh-HWE" customClass="ScenarioTVCell" customModule="ExpertSystem" customModuleProvider="target">
@@ -64,14 +70,17 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="udv-Fs-7EJ" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="0re-Fq-MFj"/>
                             <constraint firstItem="QEI-VG-9hc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="12" id="CeK-xs-n9k"/>
                             <constraint firstItem="QEI-VG-9hc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="U51-kW-htP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QEI-VG-9hc" secondAttribute="trailing" constant="12" id="hwY-2G-xsF"/>
+                            <constraint firstItem="udv-Fs-7EJ" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-50" id="lBW-fU-0lT"/>
                             <constraint firstAttribute="bottom" secondItem="QEI-VG-9hc" secondAttribute="bottom" id="s4T-CZ-hvN"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Scenarios" id="DHS-v1-ouP"/>
                     <connections>
+                        <outlet property="lblNoContent" destination="udv-Fs-7EJ" id="ooh-kD-VwL"/>
                         <outlet property="scenariosTableView" destination="QEI-VG-9hc" id="mWh-kc-aOM"/>
                     </connections>
                 </viewController>
