--- a/ExpertSystem/Modules/StoryBoard/Base.lproj/Main.storyboard
+++ b/ExpertSystem/Modules/StoryBoard/Base.lproj/Main.storyboard
@@ -184,7 +184,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eV5-z3-KI0">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eV5-z3-KI0">
                                         <rect key="frame" x="0.0" y="40.333333333333357" width="369" height="184.66666666666663"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="eV5-z3-KI0" secondAttribute="height" multiplier="2:1" id="76P-th-aUQ"/>
